# meLearningOpenglCPP

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  todo.md
.old/: App.cpp.old  App.hpp.old  Program.hpp.old
lib/glad/: glad.c
lib/glad/include/glad/: glad.h
src/: App.cpp  Camera.cpp  GlBuffer.cpp  Movable.cpp  Program.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  app.cpp  main.cpp
src/headers/: App.hpp  Camera.hpp  Movable.hpp  Program.hpp  Shader.hpp  Texture.hpp  app.hpp  constants.hpp  gl_utils.hpp  macros.hpp
src/include/: Camera.hpp  GlBuffer.hpp  Movable.hpp  Program.hpp  Shader.hpp  VertexArray.hpp  VertexLayout.hpp  constants.hpp  gl_utils.hpp
src/shaders/: cube.frag  cube.vert  light.frag  triangle.frag  triangle.vert
